objects/SV_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Sold_Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Item_Id__c</fullName>
        <label>Order Item Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU Id</label>
        <referenceTo>SVProduct__c</referenceTo>
        <relationshipLabel>SV Order Items</relationshipLabel>
        <relationshipName>SV_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Order_Id__c</fullName>
        <label>SV Order Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Order__c</fullName>
        <label>SV Order</label>
        <referenceTo>SV_Order__c</referenceTo>
        <relationshipLabel>SV Order Items</relationshipLabel>
        <relationshipName>SV_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sold_Quantity__c</fullName>
        <label>Sold Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SV Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SV Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SV Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>